--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,7 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.home {
+  cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='39' height='47' viewport='0 0 100 100' style='fill:black;font-size:23px;'><text y='50%'>💩</text></svg>") 16 0,auto; /*!emojicursor.app*/
+}
